Fix bug #66015 by reverting "Removed operations on constant arrays."