Zend/tests/ns_059.phpt
@@ -1,5 +1,7 @@
 --TEST--
 059: Constant arrays
+--XFAIL--
+Actually it's hard to test where the array comes from (property, constant, ...)
 --FILE--
 <?php
 const C = array();
